# code/rust/common/Cargo.toml
[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
actix-web = "4.0"
redis = { version = "0.23", features = ["tokio-comp"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Encryption dependencies
aes = "0.8"
cipher = "0.4"
rand = "0.8"
rayon = "1.7"
num-traits = "0.2"  # For float clamp operations
ring = "0.17"
ed25519-dalek = "1.0"
sha2 = "0.10"