# code/rust/device/Cargo.toml
[package]
name = "device"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
rand = "0.7"
rand_core = "0.6"
ed25519-dalek = "1.0"
mac_address = "1.1"
rlimit = "0.9.1"
core_affinity = "0.8.1"
ring = "0.17"
libc = "0.2"