[package]
name = "stress"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
metrics = "0.20"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
futures = "0.3"
core_affinity = "0.8.1"
rlimit = "0.9.1"
num_cpus = "1.15"
libc = "0.2"
device = { path = "../device" }